--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-	"name": "cmd-deploy",
-	"version": "1.0.0",
-	"description": "前端命令行一键部署工具。A cli tool for web deploy.",
-	"type": "module",
-	"import": "json",
-	"bin": {
-		"deploy": "./bin/index.js"
-	},
-	"keywords": [
-		"web",
-		"node-ssh",
-		"deploy"
-	],
-	"author": "xinla",
-	"engines": {
-		"node": ">=18.0.0"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/xinla/cmd-deploy"
-	},
-	"dependencies": {
-		"archiver": "^7.0.1",
-		"chalk": "^5.3.0",
-		"commander": "^12.1.0",
-		"inquirer": "^11.0.2",
-		"node-ssh": "^13.2.0",
-		"ora": "^8.1.0",
-		"semver": "^7.6.3"
-	}
+  "name": "cmd-deploy",
+  "version": "1.0.0",
+  "description": "前端命令行一键部署工具。A cli tool for web deploy.",
+  "type": "module",
+  "import": "json",
+  "bin": {
+    "deploy": "./bin/index.js"
+  },
+  "keywords": [
+    "web",
+    "node-ssh",
+    "deploy"
+  ],
+  "license": "Apache-2.0",
+  "author": "xinla",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xinla/cmd-deploy"
+  },
+  "dependencies": {
+    "archiver": "^7.0.1",
+    "chalk": "^5.3.0",
+    "commander": "^12.1.0",
+    "inquirer": "^11.0.2",
+    "node-ssh": "^13.2.0",
+    "ora": "^8.1.0",
+    "semver": "^7.6.3"
+  }
 }
