--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cmd-deploy",
-  "version": "1.0.1",
-  "description": "前端命令行一键部署工具。A cli tool for web deploy.",
+  "version": "2.0.0-beta.1",
+  "description": "命令行一键自动化部署工具。",
   "type": "module",
   "import": "json",
   "bin": {
