--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cmd-deploy",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-rc.1",
   "description": "命令行一键自动化部署工具。",
   "type": "module",
   "import": "json",
